--- a/src/rpart/290_TareaHogar_02.ipynb
+++ b/src/rpart/290_TareaHogar_02.ipynb
@@ -185,18 +185,18 @@
       ],
       "metadata": {
         "id": "ilEZ-bE2VybW",
-        "outputId": "f38860e0-8768-48f3-8970-d7c481a90055",
+        "outputId": "366081c4-bd60-484c-ff70-a19f21c1d45e",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 3,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Drive already mounted at /content/.drive; to attempt to forcibly remount, call drive.mount(\"/content/.drive\", force_remount=True).\n"
+            "Mounted at /content/.drive\n"
           ]
         }
       ]
@@ -252,27 +252,20 @@
       ],
       "metadata": {
         "id": "W8dQFI5QYCFa",
-        "outputId": "6194222d-f866-450c-85be-1f5be3898200",
+        "outputId": "0dbbee35-d165-4d84-b1fd-8c7b607f4150",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 4,
+      "execution_count": 2,
       "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "ln: failed to create symbolic link '/content/buckets/b1/labo1': File exists\n"
-          ]
-        },
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": []
           },
           "metadata": {},
-          "execution_count": 4
+          "execution_count": 2
         }
       ]
     },
@@ -294,7 +287,7 @@
       ],
       "metadata": {
         "id": "oZG_4br6szlT",
-        "outputId": "ee29cef6-1e3e-4fc6-b343-4d9c6d4a6dc9",
+        "outputId": "6b13ee46-7416-44d1-84b7-4fbea09349b5",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 129
@@ -312,16 +305,16 @@
               "\t<tr><th></th><th scope=col>used</th><th scope=col>(Mb)</th><th scope=col>gc trigger</th><th scope=col>(Mb)</th><th scope=col>max used</th><th scope=col>(Mb)</th></tr>\n",
               "</thead>\n",
               "<tbody>\n",
-              "\t<tr><th scope=row>Ncells</th><td> 657244</td><td>35.2</td><td>1454457</td><td>77.7</td><td>1326122</td><td>70.9</td></tr>\n",
+              "\t<tr><th scope=row>Ncells</th><td> 657244</td><td>35.2</td><td>1454477</td><td>77.7</td><td>1326118</td><td>70.9</td></tr>\n",
               "\t<tr><th scope=row>Vcells</th><td>1220271</td><td> 9.4</td><td>8388608</td><td>64.0</td><td>1975128</td><td>15.1</td></tr>\n",
               "</tbody>\n",
               "</table>\n"
             ],
-            "text/markdown": "\nA matrix: 2 × 6 of type dbl\n\n| <!--/--> | used | (Mb) | gc trigger | (Mb) | max used | (Mb) |\n|---|---|---|---|---|---|---|\n| Ncells |  657244 | 35.2 | 1454457 | 77.7 | 1326122 | 70.9 |\n| Vcells | 1220271 |  9.4 | 8388608 | 64.0 | 1975128 | 15.1 |\n\n",
-            "text/latex": "A matrix: 2 × 6 of type dbl\n\\begin{tabular}{r|llllll}\n  & used & (Mb) & gc trigger & (Mb) & max used & (Mb)\\\\\n\\hline\n\tNcells &  657244 & 35.2 & 1454457 & 77.7 & 1326122 & 70.9\\\\\n\tVcells & 1220271 &  9.4 & 8388608 & 64.0 & 1975128 & 15.1\\\\\n\\end{tabular}\n",
+            "text/markdown": "\nA matrix: 2 × 6 of type dbl\n\n| <!--/--> | used | (Mb) | gc trigger | (Mb) | max used | (Mb) |\n|---|---|---|---|---|---|---|\n| Ncells |  657244 | 35.2 | 1454477 | 77.7 | 1326118 | 70.9 |\n| Vcells | 1220271 |  9.4 | 8388608 | 64.0 | 1975128 | 15.1 |\n\n",
+            "text/latex": "A matrix: 2 × 6 of type dbl\n\\begin{tabular}{r|llllll}\n  & used & (Mb) & gc trigger & (Mb) & max used & (Mb)\\\\\n\\hline\n\tNcells &  657244 & 35.2 & 1454477 & 77.7 & 1326118 & 70.9\\\\\n\tVcells & 1220271 &  9.4 & 8388608 & 64.0 & 1975128 & 15.1\\\\\n\\end{tabular}\n",
             "text/plain": [
               "       used    (Mb) gc trigger (Mb) max used (Mb)\n",
-              "Ncells  657244 35.2 1454457    77.7 1326122  70.9\n",
+              "Ncells  657244 35.2 1454477    77.7 1326118  70.9\n",
               "Vcells 1220271  9.4 8388608    64.0 1975128  15.1"
             ]
           },
@@ -341,7 +334,7 @@
       ],
       "metadata": {
         "id": "JO-12d7YHkWy",
-        "outputId": "3c1618c5-f0fa-4167-a4c7-1c74db6b5b5a",
+        "outputId": "2b5a66e5-f4af-486e-ed85-c55c45eaaaeb",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -386,7 +379,7 @@
         "PARAM <- list()\n",
         "# reemplazar por su primer semilla\n",
         "PARAM$semilla_primigenia <- 191717\n",
-        "PARAM$qsemillas <- 7\n",
+        "PARAM$qsemillas <- 16\n",
         "\n",
         "PARAM$training_pct <- 70L  # entre  1L y 99L\n",
         "\n",
@@ -510,14 +503,14 @@
         "# carpeta de trabajo\n",
         "# por fabor cambiar numero de experimento si se cambia el loop principal\n",
         "setwd(\"/content/buckets/b1/exp\")\n",
-        "experimento <- \"HT0211_2\"\n",
+        "experimento <- \"HT0211_c4\"\n",
         "dir.create(experimento, showWarnings=FALSE)\n",
         "setwd( paste0(\"/content/buckets/b1/exp/\", experimento ))"
       ],
       "metadata": {
         "id": "L-DOGHOjIG7G"
       },
-      "execution_count": 15,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -532,7 +525,7 @@
       "metadata": {
         "id": "NM-mrLWcIPo6"
       },
-      "execution_count": 8,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -548,7 +541,7 @@
       "metadata": {
         "id": "tSlY0EcgIWdi"
       },
-      "execution_count": 9,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -581,7 +574,7 @@
       "metadata": {
         "id": "xxCAwIKyIaTl"
       },
-      "execution_count": 10,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -648,7 +641,7 @@
         "id": "ipLHm3STIfmb",
         "cellView": "form"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -718,7 +711,7 @@
         "id": "aK59cRaksScD",
         "cellView": "form"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -794,7 +787,7 @@
         "id": "U__C8pfPeTOW",
         "cellView": "form"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -855,7 +848,7 @@
         "id": "nMktXlxcue0z",
         "cellView": "form"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -948,7 +941,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -960,6 +953,35 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "  params = list(\n",
+        "          cp=-1,\n",
+        "          maxdepth=10,\n",
+        "          minsplit=750,\n",
+        "          minbucket=41)\n",
+        "\n",
+        "  # vminsplit  minima cantidad de registros en un nodo para hacer el split\n",
+        "  param_basicos <- list(\n",
+        "    \"cp\" = params$cp, # complejidad minima\n",
+        "    \"maxdepth\" = params$maxdepth, # profundidad máxima del arbol\n",
+        "    \"minsplit\" = params$minsplit, # tamaño minimo de nodo para hacer split\n",
+        "    \"minbucket\" = params$minbucket # minima cantidad de registros en una hoja\n",
+        "  )\n",
+        "\n",
+        "  # Un solo llamado, con la semilla 17\n",
+        "  ganancias <- ArbolesMontecarlo(PARAM$semillas, param_basicos)\n",
+        "\n",
+        "  ganancias"
+      ],
+      "metadata": {
+        "id": "l65nMhsJrW9M"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
