--- a/src/rpart/290_TareaHogar_02.ipynb
+++ b/src/rpart/290_TareaHogar_02.ipynb
@@ -190,7 +190,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -257,7 +257,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -293,7 +293,7 @@
           "height": 129
         }
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -339,7 +339,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -389,7 +389,7 @@
       "metadata": {
         "id": "Vt5fC6bWHu5r"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -415,7 +415,7 @@
       "metadata": {
         "id": "Z1dchsrWH4MD"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -471,7 +471,7 @@
       "metadata": {
         "id": "xsHwS1CzIA70"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -494,7 +494,7 @@
       "metadata": {
         "id": "BvBVOuhqIEjD"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -510,7 +510,7 @@
       "metadata": {
         "id": "L-DOGHOjIG7G"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -525,7 +525,7 @@
       "metadata": {
         "id": "NM-mrLWcIPo6"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -541,7 +541,7 @@
       "metadata": {
         "id": "tSlY0EcgIWdi"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -574,7 +574,7 @@
       "metadata": {
         "id": "xxCAwIKyIaTl"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -959,10 +959,10 @@
       "source": [
         "\n",
         "  params = list(\n",
-        "          cp=-1,\n",
+        "          cp=-0.5,\n",
         "          maxdepth=10,\n",
-        "          minsplit=750,\n",
-        "          minbucket=41)\n",
+        "          minsplit=875,\n",
+        "          minbucket=28)\n",
         "\n",
         "  # vminsplit  minima cantidad de registros en un nodo para hacer el split\n",
         "  param_basicos <- list(\n",
@@ -974,6 +974,8 @@
         "\n",
         "  # Un solo llamado, con la semilla 17\n",
         "  ganancias <- ArbolesMontecarlo(PARAM$semillas, param_basicos)\n",
+        "\n",
+        "  tb_grid_search_detalle <- rbindlist(ganancias)\n",
         "\n",
         "  ganancias"
       ],
