--- a/src/rpart/301_OptimizacionHiperparametros.ipynb
+++ b/src/rpart/301_OptimizacionHiperparametros.ipynb
@@ -183,11 +183,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
-        "id": "9LpZCst5a7Zs"
+        "id": "9LpZCst5a7Zs",
+        "outputId": "37daaa7c-de70-4d7b-d9df-27dca6dfd85e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Mounted at /content/.drive\n"
+          ]
+        }
+      ],
       "source": [
         "# primero establecer el Runtime de Python 3\n",
         "from google.colab import drive\n",
@@ -211,11 +223,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
-        "id": "XWLelftXa7Zt"
+        "id": "XWLelftXa7Zt",
+        "outputId": "12c42cf5-f816-4de4-8c6d-99354ce8b247",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": []
+          },
+          "metadata": {},
+          "execution_count": 2
+        }
+      ],
       "source": [
         "%%shell\n",
         "\n",
@@ -268,11 +293,42 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
-        "id": "QrRq-FePb-r7"
+        "id": "QrRq-FePb-r7",
+        "outputId": "4697584c-9fe2-44de-e7a0-b67fb840d42b",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 129
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/html": [
+              "<table class=\"dataframe\">\n",
+              "<caption>A matrix: 2 × 6 of type dbl</caption>\n",
+              "<thead>\n",
+              "\t<tr><th></th><th scope=col>used</th><th scope=col>(Mb)</th><th scope=col>gc trigger</th><th scope=col>(Mb)</th><th scope=col>max used</th><th scope=col>(Mb)</th></tr>\n",
+              "</thead>\n",
+              "<tbody>\n",
+              "\t<tr><th scope=row>Ncells</th><td> 657244</td><td>35.2</td><td>1454474</td><td>77.7</td><td>1326137</td><td>70.9</td></tr>\n",
+              "\t<tr><th scope=row>Vcells</th><td>1220271</td><td> 9.4</td><td>8388608</td><td>64.0</td><td>1975128</td><td>15.1</td></tr>\n",
+              "</tbody>\n",
+              "</table>\n"
+            ],
+            "text/markdown": "\nA matrix: 2 × 6 of type dbl\n\n| <!--/--> | used | (Mb) | gc trigger | (Mb) | max used | (Mb) |\n|---|---|---|---|---|---|---|\n| Ncells |  657244 | 35.2 | 1454474 | 77.7 | 1326137 | 70.9 |\n| Vcells | 1220271 |  9.4 | 8388608 | 64.0 | 1975128 | 15.1 |\n\n",
+            "text/latex": "A matrix: 2 × 6 of type dbl\n\\begin{tabular}{r|llllll}\n  & used & (Mb) & gc trigger & (Mb) & max used & (Mb)\\\\\n\\hline\n\tNcells &  657244 & 35.2 & 1454474 & 77.7 & 1326137 & 70.9\\\\\n\tVcells & 1220271 &  9.4 & 8388608 & 64.0 & 1975128 & 15.1\\\\\n\\end{tabular}\n",
+            "text/plain": [
+              "       used    (Mb) gc trigger (Mb) max used (Mb)\n",
+              "Ncells  657244 35.2 1454474    77.7 1326137  70.9\n",
+              "Vcells 1220271  9.4 8388608    64.0 1975128  15.1"
+            ]
+          },
+          "metadata": {}
+        }
+      ],
       "source": [
         "# limpio la memoria\n",
         "rm(list=ls(all.names=TRUE)) # remove all objects\n",
@@ -281,11 +337,28 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
-        "id": "IIeRpVlZb-r8"
+        "id": "IIeRpVlZb-r8",
+        "outputId": "55926a1f-ef2d-4b26-ad26-1a08ec453583",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "Loading required package: data.table\n",
+            "\n",
+            "Loading required package: rpart\n",
+            "\n",
+            "Loading required package: ggplot2\n",
+            "\n"
+          ]
+        }
+      ],
       "source": [
         "# cargo las librerias que necesito\n",
         "require(\"data.table\")\n",
@@ -305,7 +378,7 @@
       "metadata": {
         "id": "3Wb-iYIGb-r8"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -322,7 +395,7 @@
       "source": [
         "# cambiar aqui los parametros\n",
         "PARAM <- list()\n",
-        "PARAM$semilla_primigenia <- 102191\n",
+        "PARAM$semilla_primigenia <- 191717\n",
         "\n",
         "\n",
         "PARAM$minsplit <- 300\n",
