--- a/src/RepensandoOverfitting/RepensandoelOverfitting.ipynb
+++ b/src/RepensandoOverfitting/RepensandoelOverfitting.ipynb
@@ -53,11 +53,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
-        "id": "9LpZCst5a7Zs"
+        "id": "9LpZCst5a7Zs",
+        "outputId": "3d1901b5-9ecc-4220-8ec1-29f9a1f91c11",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Mounted at /content/.drive\n"
+          ]
+        }
+      ],
       "source": [
         "# primero establecer el Runtime de Python 3\n",
         "from google.colab import drive\n",
@@ -81,11 +93,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
-        "id": "XWLelftXa7Zt"
+        "id": "XWLelftXa7Zt",
+        "outputId": "aa17928e-5fc0-4ae2-b98b-d03165f63c8a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": []
+          },
+          "metadata": {},
+          "execution_count": 2
+        }
+      ],
       "source": [
         "%%shell\n",
         "\n",
@@ -169,11 +194,42 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
-        "id": "QrRq-FePb-r7"
+        "id": "QrRq-FePb-r7",
+        "outputId": "aa7ba495-8239-4258-bf01-8d965fbcfc60",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 129
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/html": [
+              "<table class=\"dataframe\">\n",
+              "<caption>A matrix: 2 × 6 of type dbl</caption>\n",
+              "<thead>\n",
+              "\t<tr><th></th><th scope=col>used</th><th scope=col>(Mb)</th><th scope=col>gc trigger</th><th scope=col>(Mb)</th><th scope=col>max used</th><th scope=col>(Mb)</th></tr>\n",
+              "</thead>\n",
+              "<tbody>\n",
+              "\t<tr><th scope=row>Ncells</th><td> 657244</td><td>35.2</td><td>1454462</td><td>77.7</td><td>1326107</td><td>70.9</td></tr>\n",
+              "\t<tr><th scope=row>Vcells</th><td>1220271</td><td> 9.4</td><td>8388608</td><td>64.0</td><td>1975128</td><td>15.1</td></tr>\n",
+              "</tbody>\n",
+              "</table>\n"
+            ],
+            "text/markdown": "\nA matrix: 2 × 6 of type dbl\n\n| <!--/--> | used | (Mb) | gc trigger | (Mb) | max used | (Mb) |\n|---|---|---|---|---|---|---|\n| Ncells |  657244 | 35.2 | 1454462 | 77.7 | 1326107 | 70.9 |\n| Vcells | 1220271 |  9.4 | 8388608 | 64.0 | 1975128 | 15.1 |\n\n",
+            "text/latex": "A matrix: 2 × 6 of type dbl\n\\begin{tabular}{r|llllll}\n  & used & (Mb) & gc trigger & (Mb) & max used & (Mb)\\\\\n\\hline\n\tNcells &  657244 & 35.2 & 1454462 & 77.7 & 1326107 & 70.9\\\\\n\tVcells & 1220271 &  9.4 & 8388608 & 64.0 & 1975128 & 15.1\\\\\n\\end{tabular}\n",
+            "text/plain": [
+              "       used    (Mb) gc trigger (Mb) max used (Mb)\n",
+              "Ncells  657244 35.2 1454462    77.7 1326107  70.9\n",
+              "Vcells 1220271  9.4 8388608    64.0 1975128  15.1"
+            ]
+          },
+          "metadata": {}
+        }
+      ],
       "source": [
         "# limpio la memoria\n",
         "rm(list=ls(all.names=TRUE)) # remove all objects\n",
@@ -182,11 +238,35 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
-        "id": "IIeRpVlZb-r8"
+        "id": "IIeRpVlZb-r8",
+        "outputId": "d7dd768b-09e5-4c11-ff3f-72ff697e0ad7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "Loading required package: data.table\n",
+            "\n",
+            "Loading required package: rpart\n",
+            "\n",
+            "Loading required package: rpart.plot\n",
+            "\n",
+            "Warning message in library(package, lib.loc = lib.loc, character.only = TRUE, logical.return = TRUE, :\n",
+            "“there is no package called ‘rpart.plot’”\n",
+            "Installing package into ‘/usr/local/lib/R/site-library’\n",
+            "(as ‘lib’ is unspecified)\n",
+            "\n",
+            "Loading required package: rpart.plot\n",
+            "\n"
+          ]
+        }
+      ],
       "source": [
         "# cargo las librerias que necesito\n",
         "require(\"data.table\")\n",
@@ -210,17 +290,17 @@
       "cell_type": "code",
       "source": [
         "PARAM <- list()\n",
-        "PARAM$semilla_primigenia <- 102191\n",
+        "PARAM$semilla_primigenia <- 191717\n",
         "\n",
         "PARAM$rpart$cp <- -0.5\n",
-        "PARAM$rpart$minsplit <- 600\n",
-        "PARAM$rpart$minbucket <- 150\n",
-        "PARAM$rpart$maxdepth <- 6"
+        "PARAM$rpart$minsplit <- 720\n",
+        "PARAM$rpart$minbucket <- 41\n",
+        "PARAM$rpart$maxdepth <- 10"
       ],
       "metadata": {
         "id": "2qpjKn_e4H9l"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -235,7 +315,7 @@
       "metadata": {
         "id": "3Wb-iYIGb-r8"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -247,7 +327,7 @@
       "metadata": {
         "id": "SL7gcMhG7mwv"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -259,7 +339,7 @@
       "metadata": {
         "id": "BHlykx9-8NA_"
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -274,7 +354,7 @@
       "metadata": {
         "id": "72z4891K1z_E"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -292,7 +372,7 @@
       "metadata": {
         "id": "xfaO_ozD4Y0N"
       },
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -305,10 +385,31 @@
         "dev.off()"
       ],
       "metadata": {
-        "id": "ZwDgjmrC5Yal"
+        "id": "ZwDgjmrC5Yal",
+        "outputId": "cf98f9f0-0132-48ed-f68d-605743aa6377",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/html": [
+              "<strong>agg_record_1037810416:</strong> 2"
+            ],
+            "text/markdown": "**agg_record_1037810416:** 2",
+            "text/latex": "\\textbf{agg\\textbackslash{}\\_record\\textbackslash{}\\_1037810416:} 2",
+            "text/plain": [
+              "agg_record_1037810416 \n",
+              "                    2 "
+            ]
+          },
+          "metadata": {}
+        }
+      ]
     },
     {
       "cell_type": "markdown",
