--- a/src/ensembles/420_ArbolesAzarosos.ipynb
+++ b/src/ensembles/420_ArbolesAzarosos.ipynb
@@ -91,11 +91,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
-        "id": "9LpZCst5a7Zs"
+        "id": "9LpZCst5a7Zs",
+        "outputId": "86c7f4e9-7b37-41fa-ed0b-85bc647e9acc",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Mounted at /content/.drive\n"
+          ]
+        }
+      ],
       "source": [
         "# primero establecer el Runtime de Python 3\n",
         "from google.colab import drive\n",
@@ -119,11 +131,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
-        "id": "XWLelftXa7Zt"
+        "id": "XWLelftXa7Zt",
+        "outputId": "d16d235b-94d4-4d4d-a8ca-23e58af0c5de",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": []
+          },
+          "metadata": {},
+          "execution_count": 2
+        }
+      ],
       "source": [
         "%%shell\n",
         "\n",
@@ -223,18 +248,69 @@
         "format(Sys.time(), \"%a %b %d %X %Y\")"
       ],
       "metadata": {
-        "id": "LrdtraBYJrsx"
+        "id": "LrdtraBYJrsx",
+        "outputId": "65a44444-cad3-4afb-e344-67f6e62f9f3f",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/html": [
+              "'Wed Oct 22 12:51:44 AM 2025'"
+            ],
+            "text/markdown": "'Wed Oct 22 12:51:44 AM 2025'",
+            "text/latex": "'Wed Oct 22 12:51:44 AM 2025'",
+            "text/plain": [
+              "[1] \"Wed Oct 22 12:51:44 AM 2025\""
+            ]
+          },
+          "metadata": {}
+        }
+      ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
-        "id": "1iE0U4_WCPRT"
+        "id": "1iE0U4_WCPRT",
+        "outputId": "a2f67601-199c-49e2-879c-15f7528ab04e",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 129
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/html": [
+              "<table class=\"dataframe\">\n",
+              "<caption>A matrix: 2 × 6 of type dbl</caption>\n",
+              "<thead>\n",
+              "\t<tr><th></th><th scope=col>used</th><th scope=col>(Mb)</th><th scope=col>gc trigger</th><th scope=col>(Mb)</th><th scope=col>max used</th><th scope=col>(Mb)</th></tr>\n",
+              "</thead>\n",
+              "<tbody>\n",
+              "\t<tr><th scope=row>Ncells</th><td> 660381</td><td>35.3</td><td>1454474</td><td>77.7</td><td>1454474</td><td>77.7</td></tr>\n",
+              "\t<tr><th scope=row>Vcells</th><td>1226627</td><td> 9.4</td><td>8388608</td><td>64.0</td><td>1975128</td><td>15.1</td></tr>\n",
+              "</tbody>\n",
+              "</table>\n"
+            ],
+            "text/markdown": "\nA matrix: 2 × 6 of type dbl\n\n| <!--/--> | used | (Mb) | gc trigger | (Mb) | max used | (Mb) |\n|---|---|---|---|---|---|---|\n| Ncells |  660381 | 35.3 | 1454474 | 77.7 | 1454474 | 77.7 |\n| Vcells | 1226627 |  9.4 | 8388608 | 64.0 | 1975128 | 15.1 |\n\n",
+            "text/latex": "A matrix: 2 × 6 of type dbl\n\\begin{tabular}{r|llllll}\n  & used & (Mb) & gc trigger & (Mb) & max used & (Mb)\\\\\n\\hline\n\tNcells &  660381 & 35.3 & 1454474 & 77.7 & 1454474 & 77.7\\\\\n\tVcells & 1226627 &  9.4 & 8388608 & 64.0 & 1975128 & 15.1\\\\\n\\end{tabular}\n",
+            "text/plain": [
+              "       used    (Mb) gc trigger (Mb) max used (Mb)\n",
+              "Ncells  660381 35.3 1454474    77.7 1454474  77.7\n",
+              "Vcells 1226627  9.4 8388608    64.0 1975128  15.1"
+            ]
+          },
+          "metadata": {}
+        }
+      ],
       "source": [
         "# limpio la memoria\n",
         "rm(list=ls(all.names=TRUE)) # remove all objects\n",
@@ -243,11 +319,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
-        "id": "BJDwdD0dCPRU"
+        "id": "BJDwdD0dCPRU",
+        "outputId": "572802a7-c28a-433a-e258-1f3d47da1879",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "Loading required package: data.table\n",
+            "\n",
+            "Loading required package: rpart\n",
+            "\n"
+          ]
+        }
+      ],
       "source": [
         "# cargo las librerias que necesito\n",
         "require(\"data.table\")\n",
@@ -267,7 +358,7 @@
       "cell_type": "code",
       "source": [
         "PARAM <- list()\n",
-        "PARAM$semilla_primigenia <- 102191\n",
+        "PARAM$semilla_primigenia <- 191717\n",
         "\n",
         "# parametros  arbol\n",
         "# entreno cada arbol con solo 50% de las variables variables\n",
@@ -275,9 +366,9 @@
         "PARAM$feature_fraction <- 0.5\n",
         "\n",
         "PARAM$rpart$cp <- -1\n",
-        "PARAM$rpart$minsplit <- 50\n",
-        "PARAM$rpart$minbucket <- 20\n",
-        "PARAM$rpart$maxdepth <- 6\n",
+        "PARAM$rpart$minsplit <- 750\n",
+        "PARAM$rpart$minbucket <- 41\n",
+        "PARAM$rpart$maxdepth <- 10\n",
         "\n",
         "# voy a generar 512 arboles,\n",
         "#  a mas arboles mas tiempo de proceso y MEJOR MODELO,\n",
@@ -287,7 +378,7 @@
       "metadata": {
         "id": "peRH7ySLCPRV"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -302,7 +393,7 @@
       "metadata": {
         "id": "1gZD6ZMvCPRV"
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -314,7 +405,7 @@
       "metadata": {
         "id": "Xi0emX2ECPRV"
       },
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -330,7 +421,7 @@
       "metadata": {
         "id": "RA3cSJ6KaGwA"
       },
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -343,7 +434,7 @@
       "metadata": {
         "id": "EByLkVMwaC8K"
       },
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -355,7 +446,7 @@
       "metadata": {
         "id": "rHMrHwwpaB8D"
       },
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -368,7 +459,7 @@
       "metadata": {
         "id": "bJHS2aeghw6I"
       },
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -379,7 +470,7 @@
       "metadata": {
         "id": "H_DGUB_fhzHr"
       },
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -431,7 +522,7 @@
         "\n",
         "    # subida a Kaggle\n",
         "    comando <- \"kaggle competitions submit\"\n",
-        "    competencia <- \"-c labo-i-2025-ba-analista-sr\"\n",
+        "    competencia <- \"-c labo-i-2025-virtual-analista-sr\"\n",
         "    arch <- paste( \"-f\", archivo_kaggle)\n",
         "\n",
         "    mensaje <- paste0(\"-m 'cp=\", PARAM$rpart$cp, \"  minsplit=\", PARAM$rpart$minsplit, \"  minbucket=\", PARAM$rpart$minbucket, \" maxdepth=\", PARAM$rpart$maxdepth, \"'\" )\n",
@@ -442,10 +533,40 @@
         "}\n"
       ],
       "metadata": {
-        "id": "j-xp2HQDhFmY"
+        "id": "j-xp2HQDhFmY",
+        "outputId": "4ad57730-ca79-47fd-c70f-7fd25582c1ae",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "1 \n",
+            "\n",
+            "Warning message in system(linea, intern = TRUE):\n",
+            "“running command 'kaggle competitions submit -c labo-i-2025-ba-analista-sr -f KA420_001.csv -m 'cp=-1  minsplit=750  minbucket=41 maxdepth=10'' had status 1”\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "403 Client Error: Forbidden for url: https://www.kaggle.com/api/v1/competitions/submission-url"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "2 \n",
+            "\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
