--- a/src/ensembles/420_ArbolesAzarososOptimizado.ipynb
+++ b/src/ensembles/420_ArbolesAzarososOptimizado.ipynb
@@ -788,12 +788,13 @@
         "\n",
         "  competition_name  <- \"labo-i-2025-virtual-analista-sr\"\n",
         "  mensaje <- paste0(\"cp=\", x$cp, \"  minsplit=\", x$minsplit, \"  minbucket=\", x$minbucket, \" maxdepth=\", x$maxdepth, \"\" )\n",
-        "  submit_and_get_score(competition_name,\n",
+        "  score <- submit_and_get_score(competition_name,\n",
         "                        archivo_kaggle,\n",
         "                        mensaje,\n",
         "                        max_submit_attempts = 5,\n",
         "                        max_poll_attempts = 5,\n",
         "                        wait_seconds = 60)\n",
+        "  return score;\n",
         "}"
       ],
       "metadata": {
