--- a/src/ensembles/420_ArbolesAzarososOptimizado.ipynb
+++ b/src/ensembles/420_ArbolesAzarososOptimizado.ipynb
@@ -740,6 +740,8 @@
         "  tb_prediccion[, prob_acumulada := 0]\n",
         "\n",
         "  set.seed(PARAM$semilla_primigenia)\n",
+        "  cat(\"Iteracion: \", iteracion, \"\\n\")\n",
+        "  cat(\"Params: \", x, \"\\n\")\n",
         "\n",
         "  for (arbolito in seq(PARAM$num_trees_max) ) {\n",
         "    cat( arbolito, \" \")\n",
@@ -848,32 +850,6 @@
               "1 cp=-1  minsplit=475  minbucket=238 maxdepth=7 SubmissionStatus.COMPLETE\n",
               "  publicScore privateScore\n",
               "1 54.727      NA          "
-            ]
-          },
-          "metadata": {}
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "subs[1,date]"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 35
-        },
-        "id": "_RWe9kir9Jw_",
-        "outputId": "ddbf5085-8a50-4824-dd66-3b45c71b4cf8"
-      },
-      "execution_count": 12,
-      "outputs": [
-        {
-          "output_type": "display_data",
-          "data": {
-            "text/plain": [
-              "[1] \"2025-10-26 22:53:08 UTC\""
             ]
           },
           "metadata": {}
